[gd_scene load_steps=6 format=2]

[ext_resource path="res://asset/UI/MainMenu/background.png" type="Texture" id=1]
[ext_resource path="res://src/UserInterface/LevelMenu/LevelMenu.gd" type="Script" id=2]
[ext_resource path="res://asset/UI/button/back_btn.png" type="Texture" id=3]
[ext_resource path="res://asset/UI/MainMenu/player.png" type="Texture" id=4]
[ext_resource path="res://asset/UI/MainMenu/logo_ninja_rusher.png" type="Texture" id=5]

[node name="LevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -420.0
margin_top = -240.0
margin_right = 420.0
margin_bottom = 240.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -166.847
margin_top = -170.5
margin_right = -69.8467
margin_bottom = 170.5
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListLevel" type="VBoxContainer" parent="ScrollContainer"]

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 7.55099
margin_top = 8.49487
margin_right = 40.551
margin_bottom = 41.4949
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerTexture" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 144.087
margin_top = -36.4322
margin_right = 334.087
margin_bottom = 163.568
texture = ExtResource( 4 )

[node name="LogoNinjaRusher" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 119.719
margin_top = -186.744
margin_right = 347.719
margin_bottom = -35.7436
texture = ExtResource( 5 )
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
